Atualização do projeto 01: Criação da imagem de fundo no imgur

--- a/atividades/fcc/projetos/moka/01-build-a-survey-form/styles.css
+++ b/atividades/fcc/projetos/moka/01-build-a-survey-form/styles.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  background: url("http://i.stack.imgur.com/vhoa0.jpg") no-repeat center fixed;
+  background: url("https://i.imgur.com/wNimIPS.jpeg") no-repeat center fixed;
   background-size: cover;
 }
 
