--- a/atividades/fcc/exercicios/02-JavaScript-Algorithms-and-Data-Structures-(Beta)/03-learn-basic-javascript-by-building-a-role-playing-game/styles.css
+++ b/atividades/fcc/exercicios/02-JavaScript-Algorithms-and-Data-Structures-(Beta)/03-learn-basic-javascript-by-building-a-role-playing-game/styles.css
@@ -26,7 +26,7 @@ h2 {
     font-size: 3rem;
 }
 
-div {
+div, button {
     border-radius: 10px;
     margin: 5px 0;
 }
@@ -86,4 +86,5 @@ button {
     background-image: linear-gradient(#fecc4c, #ffac33);
     border: 3px solid #feac32;
     padding: 2px;
+    margin: unset;
 }
