Adição dos códigos referentes aos 'balões de fala'

--- a/atividades/fcc/exercicios/02-JavaScript-Algorithms-and-Data-Structures-(Beta)/03-learn-basic-javascript-by-building-a-role-playing-game/styles.css
+++ b/atividades/fcc/exercicios/02-JavaScript-Algorithms-and-Data-Structures-(Beta)/03-learn-basic-javascript-by-building-a-role-playing-game/styles.css
@@ -27,7 +27,7 @@ h2 {
 }
 
 div, button {
-    border-radius: 10px;
+    border-radius: 5px;
     margin: 5px 0;
 }
 
@@ -87,4 +87,49 @@ button {
     border: 3px solid #feac32;
     padding: 2px;
     margin: unset;
+}
+
+.box3 {
+  width: 300px;
+  margin: 20px auto;
+  border-radius: 15px;
+  background: #00bfb6;
+  color: #fff;
+  padding: 20px;
+  text-align: center;
+  font-weight: 900;
+  font-family: arial;
+  position: relative;
+}
+
+
+/* speech bubble 13 */
+
+.sb13:before {
+  content: "";
+  width: 0px;
+  height: 0px;
+  position: absolute;
+  border-left: 15px solid #00bfb6;
+  border-right: 15px solid transparent;
+  border-top: 15px solid #00bfb6;
+  border-bottom: 15px solid transparent;
+  right: -16px;
+  top: 0px;
+}
+
+
+/* speech bubble 14 */
+
+.sb14:before {
+  content: "";
+  width: 0px;
+  height: 0px;
+  position: absolute;
+  border-left: 15px solid transparent;
+  border-right: 15px solid #00bfb6;
+  border-top: 15px solid #00bfb6;
+  border-bottom: 15px solid transparent;
+  left: -16px;
+  top: 0px;
 }
