Troca a cor de fundo para RebeccaPurple

--- a/atividades/fcc/projetos/moka/09-build-a-cash-register-project/styles.css
+++ b/atividades/fcc/projetos/moka/09-build-a-cash-register-project/styles.css
@@ -32,7 +32,7 @@ html {
 }
 
 body {
-  background-color: grey;
+  background-color: rebeccapurple;
   display: grid;
   height: 100vh;
   place-items: center;  
